--- a/environment.yml
+++ b/environment.yml
@@ -6,11 +6,8 @@ channels:
 dependencies:
   - python =3.8
   - pip
-  - mmseqs2
-  - pal2nal
+  - gtotree
   - muscle
-  - paml
   - blast
-  - diamond
   - prodigal
   - numpy
