--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,10 @@
 name: env-name-here-does-not-matter
 channels:
   - conda-forge
+  - defaults
   - bioconda
   - defaults
+  - astrobiomike
 dependencies:
   - python =3.8
   - pip
